[gd_scene load_steps=30 format=2]

[ext_resource path="res://UpgradeBackground.tscn" type="PackedScene" id=1]
[ext_resource path="res://rocket assets/graphics/frame.png" type="Texture" id=2]
[ext_resource path="res://rocket assets/graphics/HUD/download-removebg.png" type="Texture" id=3]
[ext_resource path="res://rocket assets/graphics/Comfortaa-Bold.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://rocket assets/graphics/animeace_b.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://rocket assets/graphics/upgrade/coin.png" type="Texture" id=8]
[ext_resource path="res://rocket assets/graphics/upgrade/unnamed.png" type="Texture" id=9]
[ext_resource path="res://rocket assets/graphics/upgrade/label_HP_bg.png" type="Texture" id=10]
[ext_resource path="res://rocket assets/graphics/rocket/rocketnose.png" type="Texture" id=11]
[ext_resource path="res://Upgrade.gd" type="Script" id=12]
[ext_resource path="res://NoseUpgrades.tscn" type="PackedScene" id=13]
[ext_resource path="res://HullUpgrades.tscn" type="PackedScene" id=14]
[ext_resource path="res://EngineUpgrades.tscn" type="PackedScene" id=15]
[ext_resource path="res://rocket assets/graphics/rocket/rockethull.png" type="Texture" id=16]
[ext_resource path="res://rocket assets/graphics/rocket/rocketengine.png" type="Texture" id=17]
[ext_resource path="res://MoneyLabel.gd" type="Script" id=18]
[ext_resource path="res://rocket assets/graphics/animeace.ttf" type="DynamicFontData" id=19]
[ext_resource path="res://FuelUpgrades.tscn" type="PackedScene" id=20]

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=2]
size = 20
font_data = ExtResource( 19 )

[sub_resource type="DynamicFont" id=3]
size = 25
font_data = ExtResource( 19 )

[sub_resource type="DynamicFont" id=4]
size = 20
font_data = ExtResource( 6 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 0, 0, 84, 84 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 84, 0, 84, 84 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 168, 0, 84, 84 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 252, 0, 84, 84 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 336, 0, 84, 84 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 420, 0, 84, 84 )

[sub_resource type="SpriteFrames" id=11]
animations = [ {
"frames": [ SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ) ],
"loop": true,
"name": "default",
"speed": 7.0
} ]

[node name="Upgrade" type="Control"]
margin_left = -1530.0
margin_right = -1530.0
script = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}
NoseUpgrades = ExtResource( 13 )
HullUpgrades = ExtResource( 14 )
EngineUpgrades = ExtResource( 15 )
FuelUpgrades = ExtResource( 20 )

[node name="Background" parent="." instance=ExtResource( 1 )]
position = Vector2( 462.537, 946.206 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 0.941176, 0.65098, 0.27451, 1 )
position = Vector2( 153, 91 )
rotation = -1.5708
scale = Vector2( 0.0564404, 0.13449 )
texture = ExtResource( 2 )

[node name="Sprite2" type="Sprite" parent="."]
modulate = Color( 0.933333, 0.780392, 0.584314, 1 )
position = Vector2( 364, 91 )
rotation = -1.5708
scale = Vector2( 0.0564404, 0.13449 )
texture = ExtResource( 2 )

[node name="UpgradeMenu" type="NinePatchRect" parent="."]
margin_left = 50.0
margin_top = 1174.0
margin_right = 1110.0
margin_bottom = 1794.0
rect_rotation = 270.0
texture = ExtResource( 9 )
region_rect = Rect2( 1.89749, 7.3241, 499.723, 147.704 )
patch_margin_left = 15
patch_margin_top = 12
patch_margin_right = 12
patch_margin_bottom = 15
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UpgradeLabel" type="Label" parent="UpgradeMenu"]
modulate = Color( 0.0235294, 0.0156863, 0.0156863, 1 )
margin_left = 1097.0
margin_top = 9.84998
margin_right = 1311.0
margin_bottom = 46.85
rect_rotation = 90.0
custom_fonts/font = SubResource( 1 )
text = "Upgrade"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionsLabel" type="Label" parent="UpgradeMenu"]
modulate = Color( 0.0235294, 0.0156863, 0.0156863, 1 )
margin_left = 1099.32
margin_top = 216.774
margin_right = 1313.32
margin_bottom = 253.774
rect_rotation = 90.0
custom_fonts/font = SubResource( 1 )
text = "Options"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="UpgradeMenu/OptionsLabel"]
modulate = Color( 1, 1, 1, 0 )
margin_right = 186.0
margin_bottom = 35.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ContinueButton" type="TextureButton" parent="UpgradeMenu"]
modulate = Color( 0.945098, 0.843137, 0.188235, 1 )
margin_left = 8.93066
margin_top = 351.322
margin_right = 1088.93
margin_bottom = 2571.32
rect_scale = Vector2( 0.1, 0.13 )
texture_normal = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="UpgradeMenu"]
modulate = Color( 0, 0, 0, 1 )
margin_left = 913.842
margin_top = 52.3422
margin_right = 968.842
margin_bottom = 71.3422
rect_rotation = 90.0
custom_fonts/font = SubResource( 2 )
text = "Nose -"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="UpgradeMenu"]
modulate = Color( 0, 0, 0, 1 )
margin_left = 412.793
margin_top = 33.5044
margin_right = 520.793
margin_bottom = 56.5044
rect_rotation = 90.0
custom_fonts/font = SubResource( 2 )
text = "Engine -"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label4" type="Label" parent="UpgradeMenu"]
modulate = Color( 0, 0, 0, 1 )
margin_left = 768.862
margin_top = 40.8395
margin_right = 858.862
margin_bottom = 63.8395
rect_rotation = 90.0
custom_fonts/font = SubResource( 2 )
text = "Hull -"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label5" type="Label" parent="UpgradeMenu"]
modulate = Color( 0, 0, 0, 1 )
margin_left = 903.918
margin_top = 351.762
margin_right = 993.918
margin_bottom = 374.762
rect_rotation = 90.0
custom_fonts/font = SubResource( 2 )
text = "Fuel -"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ContinueLabel" type="Label" parent="UpgradeMenu"]
modulate = Color( 0, 0, 0, 1 )
margin_left = 75.7598
margin_top = 424.459
margin_right = 220.76
margin_bottom = 466.459
rect_rotation = 90.0
custom_fonts/font = SubResource( 3 )
text = "Continue"

[node name="MoneyLabel" type="NinePatchRect" parent="."]
margin_left = 475.251
margin_top = 20.6622
margin_right = 700.251
margin_bottom = 62.6622
texture = ExtResource( 10 )
script = ExtResource( 18 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="MoneyLabel"]
margin_left = 92.9474
margin_top = 9.05264
margin_right = 212.947
margin_bottom = 34.0526
custom_fonts/font = SubResource( 4 )
text = "123456789"
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="MoneyLabel"]
position = Vector2( 46.3145, 21.3145 )
scale = Vector2( 0.75, 0.72619 )
frames = SubResource( 11 )
frame = 5
playing = true

[node name="RocketParts" type="Control" parent="."]
anchor_left = 0.511
anchor_top = 0.5
anchor_right = 0.618
anchor_bottom = 0.5
margin_left = 245.62
margin_top = 473.179
margin_right = 527.62
margin_bottom = 733.179
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="NoseButton" type="Button" parent="RocketParts"]
modulate = Color( 1, 1, 1, 0 )
margin_left = -61.7542
margin_top = -230.708
margin_right = 66.2458
margin_bottom = -126.708
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HullButton" type="Button" parent="RocketParts"]
modulate = Color( 1, 1, 1, 0 )
margin_left = -69.0
margin_top = -125.0
margin_right = 68.0
margin_bottom = 161.0

[node name="EngineButton" type="Button" parent="RocketParts"]
modulate = Color( 1, 1, 1, 0 )
margin_left = -65.0
margin_top = 163.0
margin_right = 69.0
margin_bottom = 248.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Nose" type="Sprite" parent="RocketParts"]
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 11 )

[node name="Hull" type="Sprite" parent="RocketParts"]
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 16 )

[node name="Engine" type="Sprite" parent="RocketParts"]
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 17 )

[node name="Fuel" type="Sprite" parent="RocketParts"]
position = Vector2( 309.275, -150.733 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 3 )

[node name="FuelButton" type="Button" parent="RocketParts"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 257.38
margin_top = -209.179
margin_right = 363.38
margin_bottom = -89.179
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UpgradeCamera" type="Camera2D" parent="."]
anchor_mode = 0
[connection signal="pressed" from="UpgradeMenu/OptionsLabel/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="UpgradeMenu/ContinueButton" to="." method="_on_ContinueButton_pressed"]
[connection signal="pressed" from="RocketParts/NoseButton" to="." method="_on_NoseButton_pressed"]
[connection signal="pressed" from="RocketParts/HullButton" to="." method="_on_HullButton_pressed"]
[connection signal="pressed" from="RocketParts/EngineButton" to="." method="_on_EngineButton_pressed"]
[connection signal="pressed" from="RocketParts/FuelButton" to="." method="_on_FuelButton_pressed"]
